# self-healing-crawler

./: .env.example  .gitignore  README.md  change_detector.py  db.py  fast_extractor.py  llm_extractor.py  main.py  orchestrator.py  product_v1.html  product_v2.html  pyproject.toml  requirements.txt  schema.py  selector_cache.py
crawler/: __init__.py  change_detector.py  config.py  db.py  exceptions.py  fast_extractor.py  llm_extractor.py  main.py  orchestrator.py  schema.py  selector_cache.py
tests/: conftest.py
tests/integration/: test_orchestrator.py
tests/unit/: test_change_detector.py  test_fast_extractor.py  test_llm_extractor.py  test_product_schema.py  test_selector_cache.py
website/: index.html
